--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="sans-serif bg-light-gray">
+  <body class="sans-serif bg-light-gray pa3">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
